Select: fix center and right align

--- a/src/components/Select/Select.css
+++ b/src/components/Select/Select.css
@@ -22,6 +22,10 @@
   font-size: 16px;
 }
 
+.Select__title {
+  display: block;
+}
+
 .Select--mimicry:focus .FormField__border {
   border-color: var(--accent);
   background: var(--field_background);
